# Juggernaut

./: CMakeLists.txt  CONTRIBUTING.md  Juggernaut.sh  LICENSE  README.md
cli/: auto_detect.c  auto_detect.h  commands.c  commands.h  main.c
config/: ethics_policy.yml  juggernaut.yml  logging.toml
core/: hash_algorithms.c  hash_algorithms.h  scheduler.c  scheduler.h
core/cpu/: bcrypt_cpu.c  bcrypt_cpu.h  md5_simd.c  md5_simd.h
core/gpu/cuda/: md5_cuda.cu  polymorphic_kernel.cu
docs/: api.md  dev_guide.md  manual.md
scripts/: benchmark.sh  install.sh
tests/: test_ai.py  test_cloud.go  test_cpu.c
